# QR_platform

./: manage.py  pyproject.toml
docker_compose/: app.yaml
qr_platform/qr_platform/: asgi.py  settings.py  wsgi.py
